fix(css): prevent overflow of whole app

--- a/frontend/src/assets/css/main.scss
+++ b/frontend/src/assets/css/main.scss
@@ -4,6 +4,7 @@
 #app {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
   display: grid;
   grid-template-columns: [main] 1fr;
   grid-template-rows: [navbar] 60px [content] 1fr;
